force-app/main/default/objects/User/fields/sugati__Add_to_Paid_By_In_Invoice__c.field-meta.xml
<CustomField>
    <fullName>sugati__Add_to_Paid_By_In_Invoice__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Show this user in the Paid By dropdown on the Supplier Payment and Supplier Invoice Popup.</inlineHelpText>
    <label>Add to Paid By On Supplier Payment Page</label>
    <type>Checkbox</type>
</CustomField>