force-app/main/default/objects/User/fields/sugati__S_U_Allow_manual_discounts__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_U_Allow_manual_discounts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Allow user to be able to add a discount or discounts to each individual PAX as part of the booking process.</description>
    <inlineHelpText>Allow user to be able to add a discount or discounts to each individual PAX as part of the booking process.</inlineHelpText>
    <label>Allow manual discounts</label>
    <type>Checkbox</type>
</CustomField>