force-app/main/default/objects/User/fields/sugati__S_U_Max_Discount_Amount__c.field-meta.xml
<CustomField>
    <fullName>sugati__S_U_Max_Discount_Amount__c</fullName>
    <label>Max Discount Amount</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>