force-app/main/default/objects/User/fields/sugati__Sales_CommissionP__c.field-meta.xml
<CustomField>
    <fullName>sugati__Sales_CommissionP__c</fullName>
    <label>Sales Commission %</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>