force-app/main/default/objects/User/fields/sugati__Show_RoE_Overwrite__c.field-meta.xml
<CustomField>
    <fullName>sugati__Show_RoE_Overwrite__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Show RoE Overwrite</label>
    <type>Checkbox</type>
</CustomField>