force-app/main/default/objects/User/fields/sugati__U_Can_Approve_Any_Booking_Margin__c.field-meta.xml
<CustomField>
    <fullName>sugati__U_Can_Approve_Any_Booking_Margin__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Can Approve Any Booking Margin</label>
    <type>Checkbox</type>
</CustomField>