force-app/main/default/objects/User/fields/sugati__U_Field_1__c.field-meta.xml
<CustomField>
    <fullName>sugati__U_Field_1__c</fullName>
    <label>Field 1</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>