force-app/main/default/objects/User/fields/sugati__U_Field_Title_1__c.field-meta.xml
<CustomField>
    <fullName>sugati__U_Field_Title_1__c</fullName>
    <label>Field Title 1</label>
    <length>255</length>
    <type>Text</type>
</CustomField>