force-app/main/default/objects/User/fields/sugati__U_Image__c.field-meta.xml
<CustomField>
    <fullName>sugati__U_Image__c</fullName>
    <label>User Image</label>
    <length>100</length>
    <type>Text</type>
</CustomField>