force-app/main/default/objects/User/fields/sugati__U_Our_Expertise__c.field-meta.xml
<CustomField>
    <fullName>sugati__U_Our_Expertise__c</fullName>
    <inlineHelpText>For Itinerary</inlineHelpText>
    <label>Our Expertise</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>