force-app/main/default/objects/User/fields/sugati__U_User_Signature__c.field-meta.xml
<CustomField>
    <fullName>sugati__U_User_Signature__c</fullName>
    <label>User Signature</label>
    <length>50</length>
    <type>Text</type>
</CustomField>