force-app/main/default/objects/User/fields/sugati__U_Why_Us__c.field-meta.xml
<CustomField>
    <fullName>sugati__U_Why_Us__c</fullName>
    <label>Why Us?</label>
    <length>32768</length>
    <type>Html</type>
</CustomField>